--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,10 +1,17 @@
-@import './base.css';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "../primevue/theme/primevue/tailwind.css";
+@import "tailwindcss/utilities";
+@import "base.css";
 
 #app {
-  max-width: 1280px;
+  width: 100%;
+  min-height: 100vh;
+  border: #2c3e50 2px solid ;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
+  background-color: #FFF8E7;
 }
 
 a,
@@ -25,11 +32,5 @@ a,
   body {
     display: flex;
     place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
   }
 }
