--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -12,6 +12,10 @@
     background-color: colors.$color-background;
 }
 
+.main-container {
+    background: linear-gradient(180deg, colors.$color-background 0%, colors.$color-background 75%, rgba(colors.$color-primary, 0.1) 95%, rgba(colors.$color-primary, 0.2) 100%)
+}
+
 
 .pi-fileupload {
     height: 100%;
